IDEUI-50: fix switcher off label visibility.

--- a/codenvy-ide-ui/src/main/resources/com/codenvy/ide/ui/switcher/switcher.css
+++ b/codenvy-ide-ui/src/main/resources/com/codenvy/ide/ui/switcher/switcher.css
@@ -43,7 +43,7 @@
 	height: 20px;
 	padding: 0;
 	line-height: 20px;
-	font-size: 10px;
+	font-size: 9px;
 	color: white;
 	font-family: mainFontFamily;
 	font-weight: bold;
@@ -61,7 +61,7 @@
 
 .onoffswitchInner:after {
 	content: "OFF";
-	padding-right: 5px;
+	padding-right: 3px;
 	background-color: #EEEEEE;
 	color: #999999;
 	text-align: right;
